# castor-server

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: brain_before_body_2026-04.md
scripts/: bench_brain_before_body.py  sdk_bug_repro.py  sdk_check.py  sdk_stream_proof.py  tool_use_check.py  wire_check.py
src/castor_server/: __init__.py  __main__.py  app.py  cli.py  config.py
src/castor_server/api/: agents.py  environments.py  events.py  extensions.py  files.py  memory.py  models.py  openai_compat.py  sessions.py  skills.py  vaults.py
src/castor_server/client/: __init__.py  stream.py
src/castor_server/core/: agent_fn.py  auth.py  event_bus.py  kernel_adapter.py  llm_adapter.py  mcp_runtime.py  memory_policy.py  rate_limit.py  sandbox_manager.py  session_manager.py
src/castor_server/models/: agents.py  common.py  environments.py  events.py  files.py  models.py  openai_compat.py  sessions.py  skills.py  vaults.py
src/castor_server/store/: cold_storage.py  database.py  db_models.py  repository.py
src/castor_server/tools/: builtin.py
tests/: conftest.py  test_agent_fn_factory.py  test_agents.py  test_auth.py  test_cli_compose.py  test_client_stream.py  test_environments.py  test_events.py  test_files.py  test_hitl_wire_format.py  test_kernel_adapter.py  test_mcp_integration.py  test_mcp_runtime.py  test_memory.py  test_mock_model.py  test_models.py  test_openai_compat.py  test_phase2.py  test_sandbox_resources.py  test_session_manager_errors.py  test_sessions.py  test_skill_injection.py  test_skills.py  test_tools.py  test_vaults.py
