[project]
name = "castor-server"
version = "0.1.0"
description = "Self-hosted, model-agnostic Anthropic Managed Agents API — built on the Castor deterministic agent runtime"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
authors = [{name = "Substratum Labs"}]
keywords = ["llm", "agents", "anthropic", "managed-agents", "castor", "self-hosted", "agent-runtime"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sse-starlette>=2.0.0",
    "castor-kernel>=0.5.1",
    "litellm>=1.40.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.20.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "click>=8.0.0",
    "httpx>=0.27.0",
    "mcp>=1.27.0",
    "sqlite-vec>=0.1.9",
]

[project.optional-dependencies]
# Install with `pip install castor-server[sandbox]` to enable Roche sandbox
# isolation for tool execution. Without this extra, tools run directly on
# the host (backward compatible with development/demo usage).
sandbox = ["roche-sandbox>=0.6.0"]
# Postgres backend (default storage is SQLite).
postgres = ["asyncpg>=0.31.0"]

[project.urls]
Homepage = "https://github.com/substratum-labs/castor-server"
Repository = "https://github.com/substratum-labs/castor-server"
Issues = "https://github.com/substratum-labs/castor-server/issues"

[project.scripts]
castor-server = "castor_server.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/castor_server"]

[tool.ruff]
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.uv.sources]
castor-kernel = { path = "../castor", editable = true }

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.6.0",
    "anthropic>=0.93.0",
]
